Stops horizontal scrolling

--- a/assets/stylesheets/sections/blog.scss
+++ b/assets/stylesheets/sections/blog.scss
@@ -138,6 +138,7 @@ section.post {
     margin: 4em 0 0;
     padding: 1em;
     color: #aaa;
+    box-sizing: border-box;
 
     a {
       color: #64c1f8;
